--- a/css/ejercicio-stylus.css
+++ b/css/ejercicio-stylus.css
@@ -1,10 +1,11 @@
 * {
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
 }
 body {
   margin: 0;
   font-family: 'Lato', sans-serif;
+  color: #333;
 }
 .buscador {
   width: 100%;
@@ -20,5 +21,34 @@ body {
   padding: 20px;
   border: none;
   border-radius: 30px;
+  font-size: 25px;
+}
+.encabezado--con-filtros {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 90%;
+  margin: 0 auto;
+  padding: 30px 0;
+}
+h2 {
+  margin-top: 10px;
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 50px;
+  font-family: 'Oswald', sans-serif;
+}
+.filtros {
+  width: 250px;
+  height: 75px;
+  padding: 20px;
+  margin-left: auto;
+}
+.filtros span {
+  text-transform: uppercase;
+  font-family: fuente2
+}
+a {
+  margin-left: 20px;
   font-size: 25px;
 }
