The main part is created

--- a/css/ejercicio-stylus.styl
+++ b/css/ejercicio-stylus.styl
@@ -4,6 +4,16 @@ color-primario = #333333
 color-secundario = #8841DA
 color-claro = #FFFFFF   
 
+contenedor()
+  display: flex
+  width: 96%
+  margin: 0 auto
+  padding: 30px 0
+
+caja-sombra()
+  background-color: color-claro
+  box-shadow: 0px 20px 33px 0px rgba(0,0,0,0.20)  
+
 * 
   box-sizing: border-box
 
@@ -20,19 +30,16 @@ body
   background-size: cover
   text-align: center
 	 &__input
-	   width: 75%
-	   height: 60px
-	   padding: 20px
-	   border: none 
-	   border-radius: 30px
-	   font-size: 25px
+	  width: 75%
+	  height: 60px
+	  padding: 20px
+	  border: none 
+	  border-radius: 30px
+	  font-size: 25px
 
 .encabezado--con-filtros
-  display: flex
-  width: 90%
-  margin: 0 auto
-  padding: 30px 0
-	h2
+  contenedor()
+  h2
 	  margin-top: 10px
 	  text-transform: uppercase
 	  font-weight: 500
@@ -43,11 +50,40 @@ body
 	  height: 75px
 	  padding: 20px
 	  margin-left: auto
+   caja-sombra()
 	  span
-	    text-transform: uppercase
-		font-family: fuente2
-	  a
-	    margin-left: 20px
-	    font-size: 25px   	
+      text-transform: uppercase
+      font-family: fuente2
+    a
+      margin-left: 20px
+      font-size: 25px 
+      color: color-primario
+
+.contenido
+  margin-bottom: 40px
+  justify-content: space-evenly
+  contenedor()
+
+.caja
+  max-width: 430px
+  caja-sombra()
+  &__contenido
+    padding: 20px
+    background-color: color-claro
+    span 
+      text-transform: uppercase
+      color: colo-secundario
+      font-family: fuente2
+    h3 
+      text-transform: uppercase
+      font-weight: normal
+      font-family: fuente2 
+
+
+
+
+
+
+
 	
 
