--- a/css/ejercicio-stylus.css
+++ b/css/ejercicio-stylus.css
@@ -27,11 +27,11 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 90%;
+  width: 96%;
   margin: 0 auto;
   padding: 30px 0;
 }
-h2 {
+.encabezado--con-filtros h2 {
   margin-top: 10px;
   text-transform: uppercase;
   font-weight: 500;
@@ -43,12 +43,48 @@ h2 {
   height: 75px;
   padding: 20px;
   margin-left: auto;
+  background-color: #fff;
+  -webkit-box-shadow: 0px 20px 33px 0px rgba(0,0,0,0.2);
+          box-shadow: 0px 20px 33px 0px rgba(0,0,0,0.2);
 }
 .filtros span {
   text-transform: uppercase;
-  font-family: fuente2
+  font-family: 'Oswald', sans-serif;
 }
-a {
+.filtros a {
   margin-left: 20px;
   font-size: 25px;
+  color: #333;
+}
+.contenido {
+  margin-bottom: 40px;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 96%;
+  margin: 0 auto;
+  padding: 30px 0;
+}
+.caja {
+  max-width: 430px;
+  background-color: #fff;
+  -webkit-box-shadow: 0px 20px 33px 0px rgba(0,0,0,0.2);
+          box-shadow: 0px 20px 33px 0px rgba(0,0,0,0.2);
+}
+.caja__contenido {
+  padding: 20px;
+  background-color: #fff;
+}
+.caja__contenido span {
+  text-transform: uppercase;
+  color: colo-secundario;
+  font-family: 'Oswald', sans-serif;
+}
+.caja__contenido h3 {
+  text-transform: uppercase;
+  font-weight: normal;
+  font-family: 'Oswald', sans-serif;
 }
