--- a/css/componentes/globales.styl
+++ b/css/componentes/globales.styl
@@ -14,6 +14,9 @@ caja-sombra()
   background-color: color-claro
   box-shadow: 0px 20px 33px 0px rgba(0,0,0,0.20)  
 
+opacidad(color, cantidad)
+  alpha(color, cantidad)
+
 * 
   box-sizing: border-box
 
