--- a/css/ejercicio-stylus.css
+++ b/css/ejercicio-stylus.css
@@ -88,3 +88,25 @@ body {
   font-weight: normal;
   font-family: 'Oswald', sans-serif;
 }
+.estadistica--articulos {
+  height: 70px;
+  padding: 20px;
+  border-top: 1px solid #333;
+}
+.estadistica--articulos ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+.estadistica--articulos ul li {
+  list-style: none;
+  color: rgba(51,51,51,0.3);
+}
+.estadistica--articulos ul span {
+  margin-left: 10px;
+}
