condicionales y loops del proyecto

--- a/css/componentes/cajas.styl
+++ b/css/componentes/cajas.styl
@@ -10,10 +10,8 @@
     padding: 20px
     background-color: color-claro
     span 
-      text-transform: uppercase
       color: colo-secundario
-      font-family: fuente2
+      titulos(fuente2)
     h3 
-      text-transform: uppercase
       font-weight: normal
-      font-family: fuente2
+      titulos(fuente2)
