--- a/css/componentes/globales.styl
+++ b/css/componentes/globales.styl
@@ -17,10 +17,23 @@ caja-sombra()
 opacidad(color, cantidad)
   alpha(color, cantidad)
 
+for header in 3 2 1
+  h{header}
+    font-size: 35px - (5*header)
+    margin: 0
+
+titulos(fuente)
+  if fuente == fuente1
+    font-family: fuente1
+  else  
+    font-family: fuente2
+    font-weight: 600
+    text-transform: uppercase     
+
 * 
   box-sizing: border-box
 
 body
   margin: 0
-  font-family: fuente1
   color: color-primario
+  titulos(fuente1)
